# agent-buisiness-lol-commentary

./: .gitignore  CLAUDE.md  demo_overlay.py  pyproject.toml
.claude/commands/: analyze-player.md  commentary.md  update-knowledge.md
src/lol_commentary/: cli.py  config.py
src/lol_commentary/analysis/: __init__.py  draft_analyzer.py  event_classifier.py  play_evaluator.py  segmenter.py  team_analyzer.py
src/lol_commentary/knowledge/: __init__.py  champion_kb.py  database.py  meta_kb.py  player_kb.py  schema.sql
src/lol_commentary/live/: __init__.py  commentary_llm.py  commentary_scheduler.py  event_detector.py  game_state.py  live_output.py  overlay_server.py  persona.py  runner.py  stream_capture.py
src/lol_commentary/live/overlay/static/: app.js  index.html  style.css
src/lol_commentary/output/: __init__.py  formatter.py  segment_context.py
src/lol_commentary/riot_api/: __init__.py  client.py  data_dragon.py  match_finder.py  models.py  timeline_parser.py
src/lol_commentary/video/: __init__.py  downloader.py  frame_extractor.py  hud_regions.py  ocr_engine.py  transcript.py
tests/: conftest.py
tests/test_live/: test_commentary_scheduler.py  test_overlay_server.py  test_persona.py
